force-app/main/default/objects/Asset_Transfer__c/Asset_Transfer__c.object-meta.xml
<CustomObject>
    <label>Asset Transfer</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>AT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Transfer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>