force-app/main/default/objects/Asset_Transfer__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Transfer</relationshipLabel>
    <relationshipName>Asset_Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>