force-app/main/default/objects/Asset_Transfer__c/fields/Date_Off_Hire__c.field-meta.xml
<CustomField>
    <fullName>Date_Off_Hire__c</fullName>
    <label>Date Off Hire</label>
    <type>Date</type>
</CustomField>