force-app/main/default/objects/Asset_Transfer__c/fields/Date_on_Hire__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Hire__c</fullName>
    <label>Date on Hire</label>
    <type>Date</type>
</CustomField>