force-app/main/default/objects/Asset_Transfer__c/fields/Date_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Date_Transferred__c</fullName>
    <label>Date Transferred</label>
    <type>Date</type>
</CustomField>