force-app/main/default/objects/Asset_Transfer__c/fields/From_WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>From_WD_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From WD Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Asset Transfer (From WD Unit)</relationshipLabel>
    <relationshipName>Asset_Transfer1</relationshipName>
    <type>Lookup</type>
</CustomField>