force-app/main/default/objects/Asset_Transfer__c/fields/Manifest__c.field-meta.xml
<CustomField>
    <fullName>Manifest__c</fullName>
    <label>Manifest #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>