force-app/main/default/objects/Asset_Transfer__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sent By</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Asset Transfer</relationshipLabel>
    <relationshipName>Asset_Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>