force-app/main/default/objects/Asset_Transfer__c/fields/Reason_for_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Transfer__c</fullName>
    <label>Reason for Transfer</label>
    <type>TextArea</type>
</CustomField>