force-app/main/default/objects/Asset_Transfer__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>