force-app/main/default/objects/Asset_Transfer__c/fields/Received_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Received_on_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received on Site</label>
    <type>Checkbox</type>
</CustomField>