force-app/main/default/objects/Asset_Transfer__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Asset Transfer (Receiver)</relationshipLabel>
    <relationshipName>Asset_Transfer1</relationshipName>
    <type>Lookup</type>
</CustomField>