force-app/main/default/objects/Asset_Transfer__c/fields/Shipping_Company_Details__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company_Details__c</fullName>
    <label>Shipping Name and Details</label>
    <type>TextArea</type>
</CustomField>