force-app/main/default/objects/Asset_Transfer__c/fields/SR_Item__c.field-meta.xml
<CustomField>
    <fullName>SR_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SR Item</label>
    <referenceTo>Services_Received__c</referenceTo>
    <relationshipLabel>Asset Transfer</relationshipLabel>
    <relationshipName>Asset_Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>