force-app/main/default/objects/Asset_Transfer__c/fields/To_WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>To_WD_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To WD Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Asset Transfer</relationshipLabel>
    <relationshipName>Asset_Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>