force-app/main/default/objects/Asset_Transfer__c/fields/WD_Asset__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Asset #</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Asset Transfer</relationshipLabel>
    <relationshipName>Asset_Transfer</relationshipName>
    <type>Lookup</type>
</CustomField>